# xfetus

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.cfg
.github/: pull_request_template.md
.github/workflows/: python-publish.yml
configs/data/: config_precompute_dataset_for_dsrgan.yaml
configs/models/: config_train_baseline_ddpm.yaml
data/: README.md
data/datasets/: README.md
docs/dependencies/: README.md
docs/examples/classifiers/: africadataset_xfetus_classifier.ipynb  fetal_planes_datasets_xfetus_classifier.ipynb
docs/examples/datasets/: spanish_dataset.ipynb
docs/examples/difussion-super-resolution-gan/: README.md
docs/examples/improved-dsr-gan/: README.md
docs/examples/laten-diffusion/: README.md
docs/examples/myriad-guidelines/: README.md  simple_model.py
docs/examples/style-swin-gan/: README.md
docs/slides/events/: README.md
examples/: README.md
examples/classifiers/: README.md  africadataset_xfetus_classifier.ipynb  fetal_planes_datasets_xfetus_classifier.ipynb
examples/improved-dsr-gan/: README.md
scripts/: hooks_pre_commit.bash  precompute_dataset_ddpm.bash  test_latent_diffusion.bash  train_ddpm.bash
src/xfetus/: __init__.py
src/xfetus/dsrgan/: ddpm_dataset.py  finetune_ddpm.py  loss.py  precompute_dataset.py  train_baseline_ddpm.py  train_baseline_hat.py
src/xfetus/improved-dsrgan/: calculate_fid.py  precompute_dataset.py  train_baseline_hat.py
src/xfetus/models/dsrgan/: calculate_fid.py  finetune_ddpm.py  precompute_dataset.py  train_baseline_ddpm.py
src/xfetus/models/hat/: hat_utils.py  sr_dataset.py  train_baseline_hat.py
src/xfetus/models/styleswingan/: SwinTransformer.py  dataset.py  diffaug.py  discriminator.py  utils.py
src/xfetus/models/styleswingan/128/: discriminator.py  generator.py
src/xfetus/models/styleswingan/utils_nvidia/: upfirdn2d.py
src/xfetus/styleswingan/: SwinTransformer.py  generator.py
src/xfetus/utils/: datasets.py  utils.py
src/xfetus/utils_nvidia/: fused_act.py  fused_bias_act.cpp  upfirdn2d.cpp
tests/: config_test.yml  config_test_latent_diffusion.yml  test_datasets.py  test_latent_diffusion.py
xfetus/: utils.py
xfetus/improved-dsrgan/: precompute_dataset.py  train_baseline_ddpm.py  train_baseline_hat.py
