[metadata]
name = xfetus
description = Python-based library for Synthesis of Ultrasound Fetal Imaging
keywords = artificial intelligence, diffusion models
author=Miguel Xochicale
email= your0@email.com
version = 0.0.7
long_description = file: README.md
long_description_content_type = text/markdown
classifiers=
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: Developers
	Topic :: Scientific/Engineering :: Artificial Intelligence
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
license = MIT
project_urls =
 Source = https://github.com/budai4medtech/xfetus
 Tracker = https://github.com/budai4medtech/xfetus/issues

[options]
packages = find:
python_requires = >=3.8
install_requires=
    notebook
    pandas
    scikit-image
	matplotlib
	opencv-python-headless
	tqdm
	wandb
	torch #todo ==2.0.1
	torchvision #todo==0.15.2
	einops
	scikit-learn
	diffusers
	basicsr

[options.packages.find]
include = xfetus
exclude = data, dependencies, docs, examples